[gd_scene load_steps=10 format=3 uid="uid://bbiychoctjnyo"]

[ext_resource type="PackedScene" uid="uid://bfhe50wg2mf52" path="res://assets/draggable.tscn" id="1_hh7ay"]
[ext_resource type="Script" uid="uid://dtskw8bguaxeb" path="res://Scenes/CardcutterLVL/poker_puzzle.gd" id="1_s5non"]
[ext_resource type="Script" uid="uid://0bjv8tbt3t8h" path="res://Scenes/CardcutterLVL/pklvl.gd" id="1_tk0jg"]
[ext_resource type="Script" uid="uid://vi25x1wp435a" path="res://scripts/all_in_one_object.gd" id="3_bk5xa"]
[ext_resource type="Texture2D" uid="uid://vcssnr5svxud" path="res://Scenes/CardcutterLVL/Playing_card_heart_2.svg.png" id="3_ua52p"]
[ext_resource type="Texture2D" uid="uid://dixwtcqb8tuy1" path="res://Scenes/CardcutterLVL/Playing_card_heart_4.svg.png" id="5_hprek"]
[ext_resource type="Texture2D" uid="uid://blrauejlywjp7" path="res://Scenes/CardcutterLVL/TS-48071_CTV_Mapping_Project_Poker_Hands_-_Four_of_a_Kind-1624967050265_tcm1488-523630.png" id="6_tk0jg"]
[ext_resource type="Texture2D" uid="uid://bdwpc7xmrsow5" path="res://Scenes/CardcutterLVL/Screenshot 2026-01-23 095035.png" id="7_kik06"]
[ext_resource type="Script" uid="uid://2qmgq8yclo1r" path="res://scripts/next_button.gd" id="9_kik06"]

[node name="Pklvl" type="Node2D"]
position = Vector2(192, 214)
script = ExtResource("1_tk0jg")
progression_options = 4
next_scene = "res://Scenes/Win.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -193.0
offset_top = -217.0
offset_right = 605.0
offset_bottom = 380.0
color = Color(0.416865, 0, 0, 1)

[node name="PokerPuzzle" type="Node2D" parent="."]
script = ExtResource("1_s5non")

[node name="Card1" parent="PokerPuzzle" instance=ExtResource("1_hh7ay")]
position = Vector2(100, 161)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_ua52p")
script = ExtResource("3_bk5xa")
item_id = "card_1"
min_z_index = -5
max_z_index = 5
z_step = 1

[node name="Card2" parent="PokerPuzzle" instance=ExtResource("1_hh7ay")]
position = Vector2(174, 162)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_hprek")
script = ExtResource("3_bk5xa")
item_id = "card_2"
min_z_index = -5
max_z_index = 5
z_step = 1

[node name="OpponentHand" type="Sprite2D" parent="PokerPuzzle"]
position = Vector2(127, -89)
scale = Vector2(0.533333, 0.560897)
texture = ExtResource("6_tk0jg")

[node name="TableCards" type="Sprite2D" parent="PokerPuzzle"]
position = Vector2(192, 36)
scale = Vector2(0.579787, 0.59396)
texture = ExtResource("7_kik06")

[node name="PokerLabel" type="Label" parent="PokerPuzzle"]
offset_left = 275.0
offset_top = 126.0
offset_right = 566.0
offset_bottom = 224.0
text = "Opponent Has: Three Of a Kind!
You Have: Two Of a Kind!
Sorry!, You Lose!"

[node name="nextButton" type="Button" parent="."]
visible = false
offset_left = 256.0
offset_top = -118.0
offset_right = 384.0
offset_bottom = -87.0
text = "To Next Level >"
script = ExtResource("9_kik06")
metadata/_edit_use_anchors_ = true

[connection signal="puzzle_complete" from="PokerPuzzle" to="." method="_on_poker_puzzle_puzzle_complete"]
[connection signal="pressed" from="nextButton" to="." method="_on_next_button_pressed"]
